# ndarray_tensor_utils

./: Cargo.toml
src/: axis.rs  dot.rs  lib.rs
